Tiny CSS fix for dark mode users

--- a/src/css/sandbox.css
+++ b/src/css/sandbox.css
@@ -180,7 +180,6 @@ svg text {
 }
 
 .dashProvince {
-    background-color: white;
     width: 100%;
 }
 
